Fix distorted images on IOS (#216)

--- a/src/assets/scss/_maps_redux.scss
+++ b/src/assets/scss/_maps_redux.scss
@@ -324,8 +324,6 @@
     position: relative;
     border-radius: 0.25rem;
     width: 100%;
-    height: 100%;
-    aspect-ratio: 145 / 123;
     background-color: #ededed;
   }
 
